<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <Button
        android:id="@+id/leg_decrement_button"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:text="@string/leg_decrement_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/leg_seek_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leg_increment_button"
        app:layout_constraintStart_toEndOf="@+id/leg_decrement_button"
        app:layout_constraintTop_toBottomOf="@+id/leg_name" />

    <TextView
        android:id="@+id/leg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/leg_decrement_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leg_increment_button"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:text="@string/leg_increment_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leg_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/leg_increment_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leg_value_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leg_value_description"
        app:layout_constraintEnd_toStartOf="@+id/leg_value"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>